[package]
name = "gbemu-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "gbemu_lib"
path = "src/lib.rs"
doctest = false
bench = false

[[bin]]
name = "gbemu_bin"
path = "src/bin.rs"
test = false
bench = false

[[bench]]
name = "bench_main"
harness = false

[dependencies]
bmp = "0.5.0"
sdl2 = "0.37.0"
spin_sleep = "1.2.1"

[dev-dependencies]
colored = "2.1.0"
rayon = "1.10.0"
criterion = { version = "0.5", features = ["html_reports"] }
